--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+margin: 0px;
+padding: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  color: floralwhite;
+  text-align: center;
+}
+
+path:hover{
+  stroke: #ffb4d9;
+  stroke-width: 1.5px;
+}
+
+p {
+  font-size: 30px;
+  color: floralwhite;
+  text-align: center;
+  padding-top: 25px;
+}
+
+table{
+  background-color: #161625 !important;
+}
+
+th{
+  padding:  20px !important;
+  background-color: #212230;
+  border-color: #69625b !important;
+  border-radius: 0px;
+}
+
+th:focus{
+  outline: #161625 !important;
+}
+
+td{
+  text-align: right;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 0px;
+}
+
+tr td{
+  background-color: #161625;
+}
+
+tr:nth-child(even) td{
+  background-color: #212230;
+  border-color: inherit;
+}
+
+tr:nth-child(odd) td{
+  border-color: inherit;
+}
+
+
+td:nth-child(2),th:nth-child(2){
+  color: #8f6eb2;
+  text-align: left;
+}
+
+td:nth-child(3),th:nth-child(3){
+  color: #fe073a;
+  text-align: center;
+}
+
+td:nth-child(4),th:nth-child(4){
+  color: #007bfe;
+  text-align: center;
+}
+ 
+td:nth-child(5),th:nth-child(5){
+  color: #28a645;
+  text-align: center;
+} 
+
+td:last-child,th:last-child{
+  color: #6c757d;
+  text-align: center;
+} 
+
+td {
+  padding-top: 7px !important;
+  padding-bottom: 7px !important;
+}
+
+.about p {
+  padding-top: 55px;
+  text-align: left;
+  font-size: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  line-height: 40px;
+}
+
+.about img {
+  padding-top: 55px;
 }
